--- a/README
+++ b/README
@@ -1,1 +1,28 @@
+# NBEATS OHLCV Close Price Prediction with Signal Generation
+
+## Overview
+
+This repository hosts an advanced implementation of the N-BEATS algorithm for predicting stock close prices using Open-High-Low-Close-Volume (OHLCV) data from 2018 to 2022. Leveraging N-BEATS' robust capabilities in time series forecasting, this project focuses on the financial market to predict closing prices and generate trading signals.
+
+## Features
+
+- **N-BEATS Algorithm**: Utilizes the cutting-edge N-BEATS model for time series forecasting.
+- **OHLCV Data (2018-2022)**: Processes extensive historical OHLCV data for accurate model training and evaluation.
+- **Close Price Prediction**: Aims at predicting the crucial closing prices in stock markets.
+- **Signal Generation**: Generates trading signals based on predictive analytics.
+- **Data Preprocessing**: Implements comprehensive preprocessing steps for optimal model performance.
+- **Model Training and Evaluation**: Provides a systematic approach to train and evaluate the forecasting model.
+- **Visualization Tools**: Includes visualization tools for comparing predictions with actual market data.
+
+## Getting Started
+
+### Prerequisites
+
+- Python 3.6 or later
+- Required Libraries: numpy, pandas, matplotlib, tensorflow/pytorch, keras (for TensorFlow)
+
+### Installation
+
+Clone the repository:
+
 
