--- a/signal_generation.ipynb
+++ b/signal_generation.ipynb
@@ -45,122 +45,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f2e37efe-f9c9-43cd-9a2c-b365e37327e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>pred_close</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2018-01-01 11:30:00</td>\n",
-       "      <td>13539.00</td>\n",
-       "      <td>13800.00</td>\n",
-       "      <td>13510.00</td>\n",
-       "      <td>13780.41</td>\n",
-       "      <td>264.989684</td>\n",
-       "      <td>13557.026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2018-01-01 12:30:00</td>\n",
-       "      <td>13780.00</td>\n",
-       "      <td>13818.55</td>\n",
-       "      <td>13555.02</td>\n",
-       "      <td>13570.35</td>\n",
-       "      <td>292.188777</td>\n",
-       "      <td>13742.600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2018-01-01 13:30:00</td>\n",
-       "      <td>13569.98</td>\n",
-       "      <td>13735.24</td>\n",
-       "      <td>13400.00</td>\n",
-       "      <td>13499.99</td>\n",
-       "      <td>271.813553</td>\n",
-       "      <td>13577.212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2018-01-01 14:30:00</td>\n",
-       "      <td>13499.97</td>\n",
-       "      <td>13670.00</td>\n",
-       "      <td>13459.11</td>\n",
-       "      <td>13616.99</td>\n",
-       "      <td>213.095829</td>\n",
-       "      <td>13524.081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2018-01-01 15:30:00</td>\n",
-       "      <td>13632.00</td>\n",
-       "      <td>13657.92</td>\n",
-       "      <td>13497.98</td>\n",
-       "      <td>13570.01</td>\n",
-       "      <td>169.512196</td>\n",
-       "      <td>13619.243</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              datetime      open      high       low     close      volume  \\\n",
-       "6  2018-01-01 11:30:00  13539.00  13800.00  13510.00  13780.41  264.989684   \n",
-       "7  2018-01-01 12:30:00  13780.00  13818.55  13555.02  13570.35  292.188777   \n",
-       "8  2018-01-01 13:30:00  13569.98  13735.24  13400.00  13499.99  271.813553   \n",
-       "9  2018-01-01 14:30:00  13499.97  13670.00  13459.11  13616.99  213.095829   \n",
-       "10 2018-01-01 15:30:00  13632.00  13657.92  13497.98  13570.01  169.512196   \n",
-       "\n",
-       "    pred_close  \n",
-       "6    13557.026  \n",
-       "7    13742.600  \n",
-       "8    13577.212  \n",
-       "9    13524.081  \n",
-       "10   13619.243  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pred.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b6978379-a095-4fc4-ad75-4734b01cf3a4",
    "metadata": {},
@@ -179,7 +63,7 @@
    "source": [
     "df_pred['True_buy']=df_pred['close']>=df_pred['open']*1.002\n",
     "df_pred['pred_buy']=df_pred['pred_close']>=df_pred['open']*1.005\n",
-    "df_buy=df_pred[df_pred['pred_buy']]"
+    "df_buy=df_pred[df_pred['pred_buy']] # dataframe with only long values"
    ]
   },
   {
@@ -191,7 +75,7 @@
    "source": [
     "df_pred['True_sell']=df_pred['close']<=df_pred['open']*0.998\n",
     "df_pred['pred_sell']=df_pred['pred_close']<=df_pred['open']*0.995\n",
-    "df_sell=df_pred[df_pred['pred_sell']]"
+    "df_sell=df_pred[df_pred['pred_sell']] #dataframe with only short positions"
    ]
   },
   {
@@ -538,7 +422,7 @@
     }
    ],
    "source": [
-    "len(set(list(df_buy.index)+list(df_sell.index)))# Total number of trades"
+    "len(set(list(df_buy.index)+list(df_sell.index)))# Total number of trades generated"
    ]
   },
   {
@@ -556,18 +440,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#boolean to integer conversion\n",
     "df_pred['pred_buy']=df_pred['pred_buy'].apply(lambda x: 1 if x else 0)\n",
-    "df_pred['pred_sell']=df_pred['pred_sell'].apply(lambda x: -1 if x else 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2da1fa33-5280-4f71-8846-81acb3d3ecf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pred['trade']=df_pred['pred_buy']+df_pred['pred_sell']"
+    "df_pred['pred_sell']=df_pred['pred_sell'].apply(lambda x: -1 if x else 0)\n",
+    "df_pred['trade']=df_pred['pred_buy']+df_pred['pred_sell'] #contains both long and short trades"
    ]
   },
   {
@@ -614,6 +490,9 @@
    ],
    "source": [
     "count=0\n",
+    "\n",
+    "#handling missing values in givend data set\n",
+    "\n",
     "for i,j in enumerate(df_pred['datetime']):\n",
     "    try:\n",
     "        if df_pred['trade'].iloc[i]==0:\n",
@@ -938,6 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transposing trades from hourly data to 3minute data for better volatility tracking\n",
     "for i in range(len(df_trade)):\n",
     "    df_3m['signals'].loc[df_trade['datetime'].iloc[i]]=df_trade['trade'].iloc[i]\n",
     "    df_3m['signals'].loc[df_trade['datetime'].iloc[i]+pd.DateOffset(minutes=57)]=-df_trade['trade'].iloc[i]"
@@ -1091,16 +971,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final.to_csv('final_logs.csv')"
+    "final.to_csv('final_logs.csv') #saving final logs in specified format"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25d8ccd3-98b8-4d77-b346-fbd8d213812d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1119,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
