--- a/signal_generation.ipynb
+++ b/signal_generation.ipynb
@@ -491,7 +491,7 @@
    "source": [
     "count=0\n",
     "\n",
-    "#handling missing values in givend data set\n",
+    "#handling missing values in given data set\n",
     "\n",
     "for i,j in enumerate(df_pred['datetime']):\n",
     "    try:\n",
